src/components/darkmode.scss
body.darkmode {
  color: #fff !important;
  background-color: #222 !important;

  .text-muted {
    color: #999 !important;
  }

  .card,
  .list-group-item {
    background-color: #303030 !important;
  }

  .card-header {
    background-color: rgba(0, 0, 0, 0.1) !important;
  }

  .modal-content {
    background-color: #303030 !important;
    border: 1px solid #444 !important;
  }

  .modal-header {
    border-bottom: 1px solid #444 !important;
  }

  .modal-footer {
    border-top: 1px solid #444 !important;
  }

  .form-control {
    background-color: rgba(255, 255, 255, 0.09) !important;
    border: 1px solid #595959 !important;
    color: #fff !important;
  }
}

